Fixed footer logo stretching

--- a/custom/style.css
+++ b/custom/style.css
@@ -100,7 +100,7 @@
 }
 
 .logo_footer_wrap_inner img {
-  height: 80px;
+  width: 320px;
 }
 
 /*Headers Logo*/
